--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My English news Agency</string>
+    <string name="app_name"> English news</string>
     <string name="admob_app_id">
 ca-app-pub-3940256099942544~3347511713</string>
     <string name="admob_banner_id">
